# nightbotsr-obsplugin

./: .aiexclude  .gitignore  CMakeLists.txt  README.md  README.pt-BR.md  buildspec.json  setup.iss
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/scripts/: Build-Windows.ps1  Package-Windows.ps1
.github/workflows/: build-project.yaml  push.yaml
build-aux/: .run-format.zsh  run-clang-format
data/locale/: en-US.ini  pt-BR.ini  pt-PT.ini
src/: SettingsManager.cpp  SettingsManager.h  nightbot-api.cpp  nightbot-api.h  nightbot-auth.cpp  nightbot-auth.h  nightbot-dock.cpp  nightbot-dock.h  nightbot-settings.cpp  nightbot-settings.h  plugin-main.cpp  plugin-support.h
